[package]
name = "ponto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
clap = { version = "4.0.26", features = ["derive"] }
serde_yaml = "0.9.33"
simple_logger = "4.3.3"
handlebars = "5.1.0"
handlebars_misc_helpers = "0.16.3"
evalexpr = "11"
shellexpand = "3"


[dev-dependencies]
tempdir = "0.3.7"
